Small inconsistencies in link color fixed, spacing added to QR

--- a/screen.css
+++ b/screen.css
@@ -325,7 +325,7 @@ These are styles that are used on judges.html
   width: 60%;
 }
 
-.judges a:visited {
+.judges article a:visited {
   color: #000000;
 }
 
@@ -365,13 +365,14 @@ These are styles that are used on credits.html
   width: 60%;
 }
 
-.credits a:visited {
+.credits article a:visited {
   color: #000000;
 }
 
 .credits img#QR {
   display: block;
   width: 30%;
+  margin-top: 1em;
 }
 
 /*
